<?xml version="1.0"?>
<package format="2">
  <name>xsens</name>
  <version>0.0.1</version>
  <description>GPS + IMU fusion node for Xsens and ublox</description>

  <maintainer email="dhfz1794@naver.com">gksma</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>ublox_msgs</depend>

  <export></export>
</package>
